Mudei o placeholder dos input de informe -> digite

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <form>
             <div class="informar_dados">
                 <label>E-mail</label>
-                <input type="email" placeholder="Informe seu e-mail">
+                <input type="email" placeholder="Digite seu e-mail">
             </div>
             <div class="informar_dados">
                 <label>Senha</label>
-                <input type="password" placeholder="Informe sua senha">
+                <input type="password" placeholder="Digite sua senha">
             </div>
         
             <div class="check_logado">
